[gd_scene load_steps=16 format=3 uid="uid://y8vtislkcgb2"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_aecwo"]
[ext_resource type="Script" path="res://scripts/player_1.gd" id="2_dsswu"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCReceiver.gd" id="3_77mj2"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCServer.gd" id="4_p02fl"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCClient.gd" id="5_r26xi"]
[ext_resource type="Script" path="res://scripts/player_2.gd" id="6_mrxdf"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCServer2.gd" id="7_ii8lt"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCReceiver2.gd" id="8_jqola"]
[ext_resource type="Script" path="res://scripts/ball.gd" id="9_ifcwb"]
[ext_resource type="FontFile" uid="uid://cksbyujvq876h" path="res://assets/pixel_font.ttf" id="10_1tfm3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h58vm"]
size = Vector2(128, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w32bf"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8hgk"]
size = Vector2(1920, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sp7ob"]
size = Vector2(64, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qmkg7"]
size = Vector2(34.7628, 14.8851)

[node name="Main" type="Sprite2D"]
texture_filter = 1
centered = false
script = ExtResource("1_aecwo")

[node name="Playground" type="Node" parent="."]

[node name="Background" type="ColorRect" parent="Playground"]
offset_right = 1920.0
offset_bottom = 1024.0
color = Color(0, 0, 0.215686, 1)
metadata/_edit_use_anchors_ = true

[node name="PlayerBorder" type="ColorRect" parent="Playground"]
offset_top = 453.0
offset_right = 1920.0
offset_bottom = 463.0
color = Color(0.552956, 0.552956, 0.552956, 1)
metadata/_edit_use_anchors_ = true

[node name="Players" type="Node" parent="."]

[node name="Player1" type="CharacterBody2D" parent="Players"]
position = Vector2(480, 960)
collision_layer = 3
script = ExtResource("2_dsswu")

[node name="ColorRect" type="ColorRect" parent="Players/Player1"]
offset_left = -64.0
offset_top = -16.0
offset_right = 64.0
offset_bottom = 16.0
color = Color(1, 0, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player1"]
shape = SubResource("RectangleShape2D_h58vm")

[node name="OSCReceiver" type="Node" parent="Players/Player1"]
script = ExtResource("3_77mj2")

[node name="OSCServer" type="Node" parent="Players/Player1"]
script = ExtResource("4_p02fl")

[node name="OSCClient" type="Node" parent="Players/Player1"]
script = ExtResource("5_r26xi")

[node name="Player2" type="CharacterBody2D" parent="Players"]
position = Vector2(1440, 960)
collision_layer = 3
script = ExtResource("6_mrxdf")

[node name="ColorRect" type="ColorRect" parent="Players/Player2"]
offset_left = -64.0
offset_top = -16.0
offset_right = 64.0
offset_bottom = 16.0
color = Color(1, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player2"]
shape = SubResource("RectangleShape2D_h58vm")

[node name="OSCServer2" type="Node" parent="Players/Player2"]
script = ExtResource("7_ii8lt")

[node name="OSCReceiver2" type="Node" parent="Players/Player2"]
script = ExtResource("8_jqola")

[node name="Ball" type="CharacterBody2D" parent="."]
top_level = true
position = Vector2(960, 540)
collision_mask = 3
script = ExtResource("9_ifcwb")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_w32bf")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(960, -32)
shape = SubResource("RectangleShape2D_h8hgk")

[node name="Left" type="CollisionShape2D" parent="Borders"]
position = Vector2(-32, 540)
shape = SubResource("RectangleShape2D_sp7ob")

[node name="Right" type="CollisionShape2D" parent="Borders"]
position = Vector2(1952, 540)
shape = SubResource("RectangleShape2D_sp7ob")

[node name="Deadzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deadzone"]
position = Vector2(960, 1056)
rotation = 3.14159
scale = Vector2(55.2314, 4.2996)
shape = SubResource("RectangleShape2D_qmkg7")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_left = 912.0
offset_top = 8.0
offset_right = 1012.0
offset_bottom = 108.0
theme_override_fonts/font = ExtResource("10_1tfm3")
theme_override_font_sizes/font_size = 100
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HighScore" type="Label" parent="Hud"]
offset_left = 1872.0
offset_right = 1922.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("10_1tfm3")
theme_override_font_sizes/font_size = 50
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Deadzone" to="." method="_on_score_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
